# Cinder-FrameGraph

./: .gitignore  .gitmodules  README.md
examples/Color/: README.md
examples/Color/proj/cmake/: CMakeLists.txt  CMakeSettings.json
examples/Color/src/: ColorApp.cpp
examples/OCIO/include/: CubeONode.h
examples/OCIO/src/: CubeONode.cpp  OCIOApp.cpp
examples/OCIO/vc2013/: Basic.vcxproj.filters
examples/OCIO/xcode/OCIO.xcodeproj/: project.pbxproj
examples/OCIO/xcode/OCIO.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
include/: Cinder-FrameGraph.h  Cinder-FrameGraph.hpp  Cinder-OCIO.h  OCIO.h  libnodes
include/Cinder-FrameGraph/: ColorGradeNode.hpp  ColorGradeShaderIONode.hpp  FullScreenQuadRenderer.hpp  GLVideo.hpp  LUTNode.hpp  LUTShaderIONode.hpp  Node.h  NodeContainer.h  OCIO.h  OCIO.hpp  QuickTime.h  QuickTime.hpp  Types.h
include/Cinder-OCIO/: NodeContainer.h  QuickTime.h  Types.h  concurrent_queue.h
include/cinder/: FrameGraph.hpp
include/cinder/framegraph/: ColorGradeNode.hpp  FullScreenQuadRenderer.hpp  GLVideo.hpp  LUTNode.hpp  OCIO.hpp  QuickTime.hpp  Types.hpp  VecNode.hpp  concurrent_queue.h
proj/cmake/: Cinder-FrameGraphConfig.cmake
samples/Basic/src/: BasicApp.cpp
samples/Basic/vc2013/: Basic.vcxproj
samples/Basic/xcode/Basic.xcodeproj/: project.pbxproj
samples/OCIO/assets/: .gitignore
samples/OCIO/vc2013/: Basic.sln
samples/OCIO/xcode/OCIO.xcodeproj/: project.pbxproj
src/: Cinder-FrameGraph.cpp  Cinder-OCIO.cpp  OCIO.cpp  libnodes
src/Cinder-FrameGraph/: ColorGradeNode.cpp  ColorGradeShaderIONode.cpp  GLVideo.cpp  LUTNode.cpp  LUTShaderIONode.cpp  Node.cpp  OCIO.cpp  QuickTime.cpp
src/Cinder-OCIO/: QuickTime.cpp
src/cinder/: FrameGraph.cpp
src/cinder/framegraph/: ColorGradeNode.cpp  GLVideo.cpp  LUTNode.cpp  OCIO.cpp  QuickTime.cpp
test/: CMakeLists.txt  test_nodes.cpp
